[PAN-2733] [PAN-2514] Java 11 updates (#1658)
* Update the build to require and target Java 11
* Add JVM flags to suppress specific illegal access warnings
* Remove Java 8 accommodations